--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "o6qxji4juk");
 </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WM30WLB4W9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WM30WLB4W9');
+</script>
   </body>
 </html>
